# nibiru

./: .clang-format  .cursorignore  .dockerignore  .gitignore  .gitmodules  .golangci.yml  .goreleaser.yml  AGENTS.md  CHANGELOG-UNRELEASED.md  CHANGELOG.md  CHAOSNET.md  CLAUDE.md  Dockerfile  Dockerfile-build  INSTALL.md  LEGACY-CHANGELOG.md  LICENSE.md  Makefile  NOTES.md  README.md  RELEASE_PROCESS.md  TODO_ANALYSIS.md  WASMVM_SECURITY_SHIM.md  app.py  buf.work.yaml  cliff.toml  codecov.yml  compare_nibi_eth_keys.go  config.yml  data.xlsx  docker-compose.yml  error.txt  gh-pr.md  git-diff-eth-rpc.txt  go.mod  go.sum  go.work  go.work.sum  go_mod_test.go  justfile  (+7 more)
.gemini/: README.md  config.yaml
.github/: CODEOWNERS  codecov.yml  dependabot.yml  issue-labeler-config.yml  pull_request_template.md
amm/: amm.pb.go
app/: ante.go  app.go  app_config.go  codec.go  config.go  encoding.go  evmante_can_transfer.go  evmante_can_transfer_test.go  evmante_emit_event.go  evmante_emit_event_test.go  evmante_eth.go  evmante_fee_checker.go  evmante_fee_checker_test.go  evmante_fee_market.go  evmante_fees.go  evmante_fees_test.go  evmante_gas_consume.go  evmante_gas_consume_test.go  evmante_gas_wanted_test.go  evmante_handler.go  evmante_handler_test.go  evmante_increment_sender_seq.go  evmante_increment_sender_seq_test.go  evmante_interfaces.go  evmante_reject_msgs.go  evmante_reject_msgs_test.go  evmante_setup_ctx.go  evmante_setup_ctx_test.go  evmante_sigverify.go  export.go  (+20 more)
lib/wasmvm/libwasmvm/: .gitignore  Cargo.toml
lib/wasmvm/libwasmvm/src/: api.rs  cache.rs  calls.rs  lib.rs  storage.rs  tests.rs
lib/wasmvm/libwasmvm/src/error/: mod.rs  rust.rs
(+6796 files in other folders)
