[package]
name = "wasmvm"
version = "1.5.9"
publish = false
authors = ["Ethan Frey <ethanfrey@users.noreply.github.com>"]
edition = "2021"
description = "Go bindings for cosmwasm contracts"
repository = "https://github.com/CosmWasm/wasmvm"
license = "Apache-2.0"
readme = "README.md"
exclude = [".gitignore"]

[lib]
crate-type = ["cdylib", "rlib"]

# the example is to allow us to compile a muslc static lib with the same codebase as we compile the
# normal dynamic libs (best workaround I could find to override crate-type on the command line)
[[example]]
name = "wasmvmstatic"
path = "src/examples/wasmvmstatic.rs"
crate-type = ["staticlib"]

[features]
default = []
# This feature requires Rust nightly because it depends on the unstable backtrace feature.
backtraces = []

[dependencies]
cosmwasm-std = { version = "1.5.11", features = [
  "staking",
  "stargate",
  "iterator",
] }
errno = "0.2"
serde_json = "1.0.91"
thiserror = "1.0.38"
hex = "0.4.3"
time = { version = "0.3.36", features = ["formatting"] }

[dependencies.cosmwasm-vm]
git = "https://github.com/NibiruChain/nibiru-wasm.git"
rev = "5811a0a2200bc955d57b199a81139489a7c947e0"
features = [
  "staking",
  "stargate",
  "iterator",
]

[dev-dependencies]
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
tempfile = "3.4.0"

[build-dependencies]
cbindgen = "0.24.3"

[profile.release]
opt-level = 3
debug = false
rpath = true
lto = false
debug-assertions = false
codegen-units = 16
panic = 'unwind'
incremental = true
overflow-checks = true
